--- a/package.json
+++ b/package.json
@@ -1,59 +1,82 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "ope-technology",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "dependencies": {
-    "gatsby": "^2.15.5",
-    "gatsby-image": "^2.2.16",
-    "gatsby-plugin-feed": "^2.3.11",
-    "gatsby-plugin-google-analytics": "^2.1.13",
-    "gatsby-plugin-manifest": "^2.2.13",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.6",
-    "gatsby-plugin-sharp": "^2.2.19",
-    "gatsby-plugin-typography": "^2.3.6",
-    "gatsby-remark-copy-linked-files": "^2.1.14",
-    "gatsby-remark-images": "^3.1.20",
-    "gatsby-remark-prismjs": "^3.3.12",
-    "gatsby-remark-responsive-iframe": "^2.2.11",
-    "gatsby-remark-smartypants": "^2.1.7",
-    "gatsby-source-filesystem": "^2.1.19",
-    "gatsby-transformer-remark": "^2.6.21",
-    "gatsby-transformer-sharp": "^2.2.13",
-    "prismjs": "^1.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
-  },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
-  },
+  "description": "O.P.E. Technology Website",
+  "version": "1.0.0",
+  "author": "David Buck",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
-  }
+    "serve": "gatsby serve"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "eslint",
+      "pretty-quick — staged",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "@raae/gatsby-remark-oembed": "^0.1.1",
+    "autoprefixer": "^9.6.1",
+    "gatsby": "^2.15.5",
+    "gatsby-image": "^2.2.16",
+    "gatsby-plugin-feed": "^2.3.11",
+    "gatsby-plugin-manifest": "^2.2.13",
+    "gatsby-plugin-netlify": "^2.1.17",
+    "gatsby-plugin-netlify-cms": "^4.1.13",
+    "gatsby-plugin-netlify-identity-widget": "^1.1.1",
+    "gatsby-plugin-offline": "^3.0.1",
+    "gatsby-plugin-postcss": "^2.1.7",
+    "gatsby-plugin-purgecss": "^4.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby-plugin-sharp": "^2.2.19",
+    "gatsby-remark-images": "^3.1.20",
+    "gatsby-remark-prismjs": "^3.3.12",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-responsive-iframe": "^2.2.11",
+    "gatsby-remark-smartypants": "^2.1.7",
+    "gatsby-source-filesystem": "^2.1.19",
+    "gatsby-transformer-remark": "^2.6.21",
+    "gatsby-transformer-sharp": "^2.2.13",
+    "netlify-cms-app": "^2.9.7",
+    "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "tailwindcss": "^1.1.2",
+    "typeface-inknut-antiqua": "0.0.75",
+    "typeface-open-sans": "0.0.75"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "gatsby-plugin-eslint": "^2.0.5",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "main": "n/a",
+  "repository": "https://github.com/davidbuck/ope.technology",
+  "homepage": "https://ope.technology"
 }
